third attempt to github pages

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://LullabyOfLies/github.io/Portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-awesome-button": "^7.0.5",
     "react-circular-progressbar": "^2.1.0",
